
v1.2.5 - 1/29/22
		•  Added --all and --All

		•  Added -x for locking

		•  Added --recreate

		•  Added --mode to specify file mode of new backups

		•  Added --minspace and --minsftpspace

		•  Added suffix support for --minsize, --minspace and --minsftpspace
		   (i.e. 100G)

		•  Added size to backup logging and output

		•  On initial creation of a config file make it pretty (default
		   values, comments, examples)

		•  Added hostname to notifications

		•  Added in-process messages for SCP/SFTP

		•  Added -0 indicators for an in-process backup

		•  -q now additionally disables color (same as --nocolor) so that
		   cron mail isn't as ugly

		•  stat() errors while scanning the file system are no longer logged
		   as they're normal when two instances of managebackups are run
		   concurrently

		•  Commit cache immediately after a backup + MD5 of that backup to
		   improve -0 and -1 performance for concurrent invocations

		•  Catch interrupts to handle SIGINT & SIGTERM and clean up temp
		   files

		•  Handle MD5 failures due to file read perms

		•  Apply -q correctly to the pruning process (linking message)

		•  Fixed rounding error in --weeks and --years retention logic

		•  Improved cache file parsing & error handling

		•  Cosmetic -0 and -1 output clean up


v1.2.2 - 1/24/22	
		• Initial C++ release

