@@ -59,7 +59,10 @@ void showHelp(enum helpType kind) {
             + "   --profile [name]    Use the specified profile for the current run.\n"
             + "   --save              Save all the specified settings to the specified profile.\n"
             + "   --recreate          Delete any existing .conf file for this profile and recreate it in the standard format\n"
-            + "   --all               Execute all profiles sequentially\n"
+            + "   -a, --all           Execute all profiles sequentially\n"
+            + "   -A, --All           Execute all profiles in parallel\n"
+            + "   -k, --cron          Execute all profiles sequentially for cron (equivalent to '-a -x -q')\n"
+            + "   -K, --Cron          Execute all profiles in parallel for cron (equivalent to '-A -x -q')\n"
             + "   -0                  Provide a summary of backups.\n"
             + "   -1                  Provide detail of backups.\n"
             + "   --install           Install this binary in /usr/local/bin, update directory perms and create the man page.\n"
